Css tweaks to fix alignment of menu.

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -5,4 +5,8 @@ header {
     width: 100%;
     height: @navHeight;
     margin-bottom: 50px;
+
+    .dropdown-wrap {
+        display: block;
+    }
 }
